# tyme

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  justfile  railway.toml  rustfmt.toml  taplo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bot/: Cargo.toml
bot/src/: main.rs
bot/src/data/: db.rs
bot/src/db/reminders/: event_loop.rs  reminder.rs
bot/src/db/timezones/: timezone.rs
bot/src/events/: interaction_create.rs  ready.rs
bot/src/interactions/: mod.rs
bot/src/interactions/autocompletes/: timezone.rs
bot/src/interactions/commands/: mod.rs  remind.rs  timezone_get.rs  timezone_remove.rs  timezone_set.rs
bot/src/messages/commands/: register.rs
bot/src/utils/: mod.rs
human_time/: Cargo.toml
human_time/src/: lib.rs
migrations/: 20230604173713_initial.sql
src/: handler.rs  macros.rs  main.rs
src/commands/: mod.rs  test.rs
src/data/: database.rs  interaction_commands.rs  message_commands.rs  mod.rs  self_id.rs
src/db/: create_reminder.rs  mod.rs
src/db/reminders/: create_reminder.rs  event_loop.rs  mod.rs  reminder.rs
src/events/: interaction_create.rs  message_create.rs  ready.rs
src/interactions/commands/: mod.rs  remind.rs  shutdown.rs  test.rs
src/messages/commands/: db.rs  execute.rs  mod.rs  register.rs  shutdown.rs
src/utils/: catch.rs  execute.rs  get_option.rs  mod.rs  register.rs  run.rs  setup.rs  store.rs
tyme/: Cargo.toml
tyme-api/: Cargo.toml
tyme-api/src/: main.rs
tyme-api/src/api/: api.rs
tyme-api/src/repository/: database.rs
tyme-cli/: Cargo.toml
tyme-db/: Cargo.toml
tyme-db/src/: lib.rs  models.rs  old_reminder.rs  old_timezone.rs  reminder.rs  schema.rs  timezone.rs
tyme-db/src/reminders/: event_loop.rs  mod.rs  reminder.rs
tyme-db/src/timezones/: timezone.rs
tyme-discord/: Cargo.toml
tyme-discord/src/: event_loop.rs  handler.rs  lib.rs  macros.rs  main.rs  setup.rs  types.rs
tyme-discord/src/commands/: help.rs  mod.rs  register.rs  remind.rs  reminders.rs  reminders_delete.rs  reminders_list.rs  shutdown.rs  timezone.rs  timezone_delete.rs  timezone_get.rs  timezone_set.rs
tyme-discord/src/data/: database.rs  mod.rs
tyme-discord/src/events/: interaction_create.rs  message_create.rs  mod.rs  ready.rs
tyme-discord/src/interactions/: mod.rs
tyme-discord/src/interactions/autocompletes/: mod.rs  timezone.rs
tyme-discord/src/interactions/commands/: mod.rs  remind.rs  reminders.rs  reminders_delete.rs  reminders_list.rs  test.rs  test_subcmdgroup1_subcmd11.rs  test_subcmdgroup1_subcmd12.rs  test_subcmdgroup2_subcmd21.rs  timezone.rs  timezone_delete.rs  timezone_get.rs  timezone_remove.rs  timezone_set.rs
tyme-discord/src/macros/: command.rs  interaction.rs  message.rs  mod.rs  option.rs
tyme-discord/src/messages/: mod.rs
tyme-discord/src/messages/commands/: execute.rs  mod.rs  register.rs  shutdown.rs
tyme-discord/src/utils/: execute.rs  fuzzy_autocomplete.rs  human_time.rs  mod.rs  pretty.rs  timestamp.rs
tyme-utils/: Cargo.toml
tyme-utils/src/: execute.rs  human_time.rs  lib.rs  pretty.rs  timestamp.rs
tyme-web/: Cargo.toml
tyme/src/: main.rs
