[package]
name = "tyme"
version = "0.1.0"
authors = ["erics118"]
edition = "2021"
rust-version = "1.65.0"
description = "A discord bot to manage reminders"
repository = ""
license = "MIT"
keywords = ["discord", "reminder"]
categories = []
publish = false

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
openssl = "0.10.49"
postgres = "0.19.5"
postgres-openssl = "0.5.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-postgres = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
