[package]
name = "tyme"
version = "0.1.0"
authors = ["erics118"]
edition = "2021"
rust-version = "1.65.0"
description = "A discord bot to manage reminders"
repository = "https://github.com/erics118/tyme"
license = "MIT"
keywords = ["discord", "reminder"]
categories = []
publish = false

[dependencies]
anyhow = "1.0.70"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.17"
serenity = { version = "0.11.5", default-features = false, features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "rustls_backend",
] }
tokio = { version = "1.28.1", features = ["full"] }
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "tls",
] }
uuid = { version = "1.3.1", features = ["v4"] }
chrono = "0.4.24"
