[package]
name = "tyme"
version = "0.1.0"
authors = ["erics118"]
edition = "2021"
rust-version = "1.68.0"
description = "A discord bot to manage reminders"
repository = "https://github.com/erics118/tyme"
license = "MIT"
keywords = ["discord", "reminder"]
categories = []
publish = false

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.28.1", features = ["full"] }
chrono = "0.4.24"
uuid = { version = "1.3.3", features = ["v4"] }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "tls",
]
