[package]
name = "tyme-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tyme-utils = { path = "../tyme-utils" }
tyme-db = { path = "../tyme-db" }
anyhow = { version = "1.0.71", features = ["backtrace"] }
log = "0.4.18"
tokio = { version = "1.28.2", features = ["full"] }
chrono = { version = "0.4.25", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4"] }
serde = { version = "1.0.163", features = ["derive"] }
actix-web = "4.3.1"

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "tls",
]

[dependencies.chrono-tz]
version = "0.8.2"
features = ["std", "case-insensitive", "serde"]
