[package]
name = "tyme-db"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
anyhow = { version = "1.0.78", features = ["backtrace"] }
chrono = "0.4.31"

[dependencies.sqlx]
features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono"]
version = "0.7.2"

[dependencies.chrono-tz]
features = ["std", "case-insensitive"]
version = "0.8.4"
