[package]
name = "tyme-discord"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
tyme-db = { path = "../tyme-db" }

anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = "0.4.31"
dotenvy = "0.15.7"
env_logger = "0.10.0"
fuzzy-matcher = "0.3.7"
log = "0.4.20"
paste = "1.0.14"
tokio = { version = "1.35.1", features = ["full"] }

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "chrono"]
git = "https://github.com/serenity-rs/serenity"
rev = "4361c1c"

[dependencies.chrono-tz]
features = ["std", "case-insensitive"]
version = "0.8.4"
