[package]
name = "tyme-discord"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
tyme-db = { path = "../tyme-db" }
anyhow = { version = "1.0.82", features = ["backtrace"] }
chrono = "0.4"
dotenvy = "0.15"
env_logger = "0.11"
fuzzy-matcher = "0.3"
log = "0.4"
paste = "1.0"
tokio = { version = "1.37", features = ["full"] }

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "chrono", "simd_json"]
git = "https://github.com/serenity-rs/serenity"
rev = "5668654"

[dependencies.chrono-tz]
features = ["std", "case-insensitive"]
version = "0.9"
