[package]
name = "tyme-discord"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
tyme-db = { path = "../tyme-db" }
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
dotenvy = "0.15"
env_logger = "0.11"
fuzzy-matcher = "0.3"
log = "0.4"
paste = "1.0"
tokio = { version = "1.38", features = ["full"] }
poise = "0.6.1"
futures = "0.3.30"
