[package]
name = "tyme-utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
chrono = "0.4.26"
chrono-tz = "0.8.2"
